CHANGELOG

2.0.31
UTILS:
* pan-os-php type=xml-issue | extend fix for custom-url-category

BUGFIX:
* UTIL type=diff | replace derr() with mwarning() - fix for argument outputformat

GENERAL:


2.0.30 (20220221)
UTILS:
* UTIL pan-os-php type=device | introduce actions=find-zone-from-IP:IPADDRESS (working on devicetype=virtualsystem / manageddevice)
* UTIL pan-os-php type=xml-to-json | improve for cycleconnectedfirewalls
* UTIL pan-os-php type=address/service | introduce actions=create-address/create-addressgroup - actions=create-service/create-servicegroup
* UTIL type=config-size | extend big XML nodes with information about how many objects are available
* UTIL pan-os-php | introduce type=config-commit - class CONFIG_COMMIT__.php , extend bash-autocompletion
* UTIL all object merger | improve output which object get delete if ancestor is found
* UTIL pan-os-php type=securityprofile | introduce 'actions=custom-url-category-add-ending-token' for securityProfileType=custom-url-category
* UTIL all script argument 'outputformatset' | improve display set commands
* UTIL develop | introduce new script - display-xpath-value  - display-xpath-for-node-filter
* UTIL UI | per-default always set shadow-ignoreinvalidaddressobjects
* UTIL pan-os-php type=xml-issue | introduce new check if address/-group/service/-group/secRule/natRule objectname has double spaces in it
* UTIL type=xml-issue | introduce additional validation if service/-group is available with name 'application-default'
* UTIL pan-os-php type=service | actions=name-rename:$$timeout$$ - introduce VARIABLE $$timeout$$
* UTIL  argument 'outputformatset' - correction of 'set commands' order print
* UTIL develop/ssh_connector.php | introduce argument 'setcommandfile=FILE' for quick validation check of create "set commands"
* UTIL type=securityprofile actions=custom-url-category-add-ending-token - improvement avoid adding token if '*' is already available at end of string
* UTIL type=device | improvments for JSON output