@@ -3,6 +3,7 @@ CHANGELOG
 2.0.31
 UTILS:
 * pan-os-php type=xml-issue | extend fix for custom-url-category
+* UTIL type=application | introduce new 'filters=( decoder has XYZ )' / (decoder is.set)
 
 BUGFIX:
 * UTIL type=diff | replace derr() with mwarning() - fix for argument outputformat
